# MapReduceProject

./: CMakeLists.txt  README.md
src/: KeyValueStore.cpp  KeyValueStore.h  MapReduce.cpp  MapReduce.h  mapreduce_server.cpp  mr_state_machine.cpp
src/common/: example_common.hxx
src/tests/: keyvaluestore_tests.cpp  mapreduce_tests.cpp
